//
// Created by escoba_j on 22/11/2016.
//

#ifndef HEARTHSTONERESOLVER_TARGET_H
#define HEARTHSTONERESOLVER_TARGET_H

enum class Target{
    ALL,
    PLAYER,
    OPPONENT_PLAYER,
    ALLIE_PLAYER,
    MINION,
    ALLIE_MINION,
    OPPONEMENT_MINION,
    NONE
};

#endif //HEARTHSTONERESOLVER_TARGET_H
