//
// Created by escoba_j on 29/11/2016.
//

#ifndef HEARTHSTONERESOLVER_CARDTYPE_H
#define HEARTHSTONERESOLVER_CARDTYPE_H

enum class CardType{
    DRAGON,
    MECA,
    BEAST,
    MURLOC,
    DEMON,
    PIRATE,
    TOTEM,
    GENERAL
};

#endif //HEARTHSTONERESOLVER_CARDTYPE_H
