//
// Created by escoba_j on 29/11/2016.
//

#ifndef HEARTHSTONERESOLVER_STATE_H
#define HEARTHSTONERESOLVER_STATE_H

enum class State{
    FORBIDDEN,
    TARGET_REQUIRED,
    SUCCESSFULL
};

#endif //HEARTHSTONERESOLVER_STATE_H
